# bmstu_reposes

RK/inf/module1/2/: main.cpp
RK/oaip/module1/rk2/: main.cpp
RK/oaip/sem1/rk2/: animals.txt  main.cpp
exams/1sem/inf/: CMakeLists.txt  README.md  example_logs.txt
exams/1sem/inf/include/: databaseConnection.hpp  order.hpp  payment.hpp  product.hpp
exams/1sem/inf/include/users/: admin.hpp  customer.hpp  manager.hpp  user.hpp
exams/1sem/inf/reports/: audit_report.csv
exams/1sem/inf/sql/: functions.sql  tables_init.sql
exams/1sem/inf/src/: admin.cpp  customer.cpp  databaseConnection.cpp  main.cpp  payment.cpp
exams/1sem/inf/table/: add_roles.sql  add_triggers.sql  add_triggers_old.sql  functions.sql  procedures.sql  users_init.sql
homeworks/inf/module2/: add_triggers.sql  clean.sql  create_roles.sql  create_tables.sql  insert_data.sql  test3.sql  test4.sql  test5.sql
labs/inf/3/task6/: get_books_count.sql
labs/inf/4/include/: author.hpp  book.hpp  borrowed_book.hpp  pair.hpp  user.hpp
labs/inf/4/src/: author.cpp  book.cpp  borrowed_book.cpp  main.cpp  user.cpp
labs/inf/4/table/: add_indexes.sql  tables_init.sql
practice/1_sem/task1/: Main.java  README.md  doc.txt
practice/1_sem/task2/: Main.java  Rectangle.java  Triangle.java  Сircle.java
practice/1_sem/task3/: ListManager.java  Main.java
practice/1_sem/task6/: Cart.java  Main.java  Product.java  README.md
